--- a/style/mediastyle.css
+++ b/style/mediastyle.css
@@ -98,7 +98,7 @@
         position: absolute;
         top: 56px;
         left: 10px;
-        background-color: rgb(238,49,49);
+        background-color: #03633b;
        transition: all 0.5s linear !important;
     }
     .Menu div ul li{
